scripts/theresistanceonline-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: theresistance-webapp-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - theresistanceboardgameonline.com
    secretName: tls-secret
  rules:
  - host: theresistanceboardgameonline.com
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: theresistance--webapp
            port:
              number: 80
